--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@lottiefiles/react-lottie-player": "^3.4.1",
     "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.1.1",
@@ -25,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
+    "react-lottie": "^1.2.3",
     "react-phone-number-input": "^3.1.35",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
