--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "smsalert": "^1.0.1",
     "web-vitals": "^1.0.1",
     "woocommerce-api": "^1.5.0"
   },
