--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-lottie": "^1.2.3",
     "react-phone-number-input": "^3.1.35",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
