--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-lottie": "^1.2.3",
+    "react-otp-input": "^2.4.0",
     "react-phone-number-input": "^3.1.35",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
@@ -36,6 +37,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "request-promise": "^4.2.6",
     "smsalert": "^1.0.1",
     "web-vitals": "^1.0.1",
     "woocommerce-api": "^1.5.0"
