--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pure-react-carousel": "^1.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-hook-form": "^7.17.5",
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
