--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux-thunk": "^2.3.0",
     "request-promise": "^4.2.6",
     "smsalert": "^1.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "woocommerce-api": "^1.5.0"
   },
